--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>purba de bootstrap</title>
 </head>
 <body>
-    <header class="container">
+    <header class="container navbar navbar-expand-lg bg-light">
         <nav class="row">
             <ul >
                 <li class="col-md-6">inicio</li>
