agregar contenido en el main

--- a/index.html
+++ b/index.html
@@ -9,12 +9,27 @@
     <title>purba de bootstrap</title>
 </head>
 <body>
-    <header class="container navbar navbar-expand-lg bg-light">
-        <nav class="row">
-            <ul >
-                <li class="col-md-6">inicio</li>
-                <li class="col-md-6">contacto</li>
-            </ul>
+    <header class="header">
+        <nav class=" container ">
+            <div class="row navbar navbar-expand-lg">
+                <div class="col-md-6 ">
+                    <a class="navbar-brand" href="./index.html">
+                        <img src="./IMG/imagenes.jpg" alt="" width="50" height="50">
+                    </a>
+                </div>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="col-md-6 collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="./HTML/contactos.html">Contacto</a>
+                        </li>
+                </div>
+            </div>    
         </nav>
     </header>
     <main class="container">
