agregando carrusel al main

--- a/index.html
+++ b/index.html
@@ -34,19 +34,45 @@
     </header>
     <main class="container">
         <section class="row">
-            <article class="col-md-4">
+            <article class="col-md-12">
+                <div id="miCarrusel" class="carousel  slide" data-bs-ride="carousel">
+                    <div class="carousel-inner">
+                        <div class="carousel-item active" data-bs-interval="1500">
+                            <img src="./IMG/paisaje1.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="1500">
+                            <img src="./IMG/paisaje2.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="1500">
+                            <img src="./IMG/paisaje3.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="1500">
+                            <img src="./IMG/paisaje4.jpg" class="d-block w-100" alt="...">
+                        </div>
+                        <div class="carousel-item" data-bs-interval="1500">
+                            <img src="./IMG/paisaje5.jpg" class="d-block w-100" alt="...">
+                        </div>
+                    </div>
+                    <button class="carousel-control-prev" type="button" data-bs-target="#miCarrusel" data-bs-slide="prev">
+                      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Previous</span>
+                    </button>
+                    <button class="carousel-control-next" type="button" data-bs-target="#miCarrusel" data-bs-slide="next">
+                      <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                      <span class="visually-hidden">Next</span>
+                    </button>
+                </div>
+            </article>
+        </section>
+        <section class="row">
+            <article class="col-md-8">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In nobis autem aspernatur quas dicta reprehenderit dolore praesentium consectetur? Cumque aperiam facilis molestias aut error quibusdam numquam libero, nemo est aliquam?
                 </p>
             </article>
-            <article class="col-md-4">
+            <article class="col-md-8">
                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In nobis autem aspernatur quas dicta reprehenderit dolore praesentium consectetur? Cumque aperiam facilis molestias aut error quibusdam numquam libero, nemo est aliquam?
                 </p>
             </article>
-            <article class="col-md-4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In nobis autem aspernatur quas dicta reprehenderit dolore praesentium consectetur? Cumque aperiam facilis molestias aut error quibusdam numquam libero, nemo est aliquam?
-                </p>
-            </article>
-
         </section>
     </main>
     <footer>
