agregando sombra a los botones del nav

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <nav class=" container ">
             <div class="row navbar navbar-expand-lg">
                 <div class="col-md-6 ">
-                    <a class="navbar-brand" href="./index.html">
+                    <a class="navbar-brand " href="./index.html">
                         <img src="./IMG/imagenes.jpg" alt="" width="50" height="50">
                     </a>
                 </div>
@@ -22,11 +22,11 @@
                 </button>
                 <div class="col-md-6 collapse navbar-collapse" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                        <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="./index.html">Inicio</a>
+                        <li class="nav-item ">
+                            <a class="nav-link active shadow-sm p-3 rounded" aria-current="page" href="./index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="./HTML/contactos.html">Contacto</a>
+                            <a class="nav-link shadow-sm p-3 rounded" href="./HTML/contactos.html">Contacto</a>
                         </li>
                 </div>
             </div>    
