--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./CSS/estilo.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <title>purba de bootstrap</title>
+    <title>Prueba de bootstrap</title>
 </head>
 <body>
     <header class="header">
@@ -26,7 +26,7 @@
                             <a class="nav-link active shadow-sm p-3 rounded" aria-current="page" href="./index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link shadow-sm p-3 rounded" href="./HTML/contactos.html">Contacto</a>
+                            <a class="nav-link shadow-sm p-3 roundedgit" href="./HTML/contactos.html">Contacto</a>
                         </li>
                 </div>
             </div>    
@@ -64,23 +64,100 @@
                 </div>
             </article>
         </section>
-        <section class="row">
-            <article class="col-md-8">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In nobis autem aspernatur quas dicta reprehenderit dolore praesentium consectetur? Cumque aperiam facilis molestias aut error quibusdam numquam libero, nemo est aliquam?
-                </p>
+        <section class="row galeria">
+            <article class="col-md-4 " >
+                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#modal1">
+                    <img src="./IMG/harold-wainwright-uCZrxtUvaGs-unsplash.jpg" class="bd-placeholder-img bd-placeholder-img-lg img-fluid img-thumbnail" alt="">
+                </button>
+                <div class="modal fade" id="modal1" tabindex="-1" aria-labelledby="modal1Label" aria-hidden="true">
+                    <div class="modal-dialog ">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <img class="modal-title bd-placeholder-img bd-placeholder-img-lg img-fluid" src="./IMG/harold-wainwright-uCZrxtUvaGs-unsplash.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </article>
-            <article class="col-md-8">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In nobis autem aspernatur quas dicta reprehenderit dolore praesentium consectetur? Cumque aperiam facilis molestias aut error quibusdam numquam libero, nemo est aliquam?
-                </p>
+            <article class="col-md-4 " >
+                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#modal2">
+                    <img src="./IMG/marek-piwnicki-T0xIMW8JQeQ-unsplash.jpg" class="bd-placeholder-img bd-placeholder-img-lg img-fluid img-thumbnail" alt="">
+                </button>
+                <div class="modal fade" id="modal2" tabindex="-1" aria-labelledby="modal2Label" aria-hidden="true">
+                    <div class="modal-dialog ">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <img class="modal-title bd-placeholder-img bd-placeholder-img-lg img-fluid" id="modal2Label" src="./IMG/marek-piwnicki-T0xIMW8JQeQ-unsplash.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="col-md-4 " >
+                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#modal3">
+                    <img src="./IMG/mario-esposito-zCux73wWZwc-unsplash.jpg" class="bd-placeholder-img bd-placeholder-img-lg img-fluid img-thumbnail" alt="">
+                </button>
+                <div class="modal fade" id="modal3" tabindex="-1" aria-labelledby="modal3Label" aria-hidden="true">
+                    <div class="modal-dialog ">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <img class="modal-title bd-placeholder-img bd-placeholder-img-lg img-fluid" id="modal3lLabel" src="./IMG/mario-esposito-zCux73wWZwc-unsplash.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+        </section>
+        <section class="row galeria">
+            <article class="col-md-4 " >
+                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#modal4">
+                    <img src="./IMG/marissa-lewis-C8fj1NKC_MI-unsplash.jpg" class="bd-placeholder-img bd-placeholder-img-lg img-fluid img-thumbnail" alt="">
+                </button>
+                <div class="modal fade" id="modal4" tabindex="-1" aria-labelledby="modal4Label" aria-hidden="true">
+                    <div class="modal-dialog ">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <img class="modal-title bd-placeholder-img bd-placeholder-img-lg img-fluid" id="modal4Label" src="./IMG/marissa-lewis-C8fj1NKC_MI-unsplash.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="col-md-4 " >
+                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#modal5">
+                    <img src="./IMG/pawan-thapa-IhYCo3RC-L8-unsplash.jpg" class="bd-placeholder-img bd-placeholder-img-lg img-fluid img-thumbnail" alt="">
+                </button>
+                <div class="modal fade" id="modal5" tabindex="-1" aria-labelledby="modal5Label" aria-hidden="true">
+                    <div class="modal-dialog ">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <img class="modal-title bd-placeholder-img bd-placeholder-img-lg img-fluid" id="modal5Label" src="./IMG/pawan-thapa-IhYCo3RC-L8-unsplash.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </article>
+            <article class="col-md-4 " >
+                <button type="button" class="btn" data-bs-toggle="modal" data-bs-target="#modal6">
+                    <img src="./IMG/photo_-reflect-tGxYRJTNxw0-unsplash.jpg" class="bd-placeholder-img bd-placeholder-img-lg img-fluid img-thumbnail" alt="">
+                </button>
+                <div class="modal fade" id="modal6" tabindex="-1" aria-labelledby="modal6Label" aria-hidden="true">
+                    <div class="modal-dialog ">
+                        <div class="modal-content">
+                            <div class="modal-body">
+                                <img class="modal-title bd-placeholder-img bd-placeholder-img-lg img-fluid" id="modal6Label" src="./IMG/photo_-reflect-tGxYRJTNxw0-unsplash.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </article>
         </section>
     </main>
     <footer>
         <div class="container">
-            <ul class="row">
-                <li class="col-md-4">item1</li>
-                <li class="col-md-4">item2</li>
-                <li class="col-md-4">item3</li>
+            <ul class="row lista">
+                <li class="lista__li col-md-6"><p>galeria de imagenes</p></li>
+                <li class="lista__li col-md-6"><p>descarga tus imagenes favoritas</p></li>
             </ul>
         </div>
     </footer>
